# jengine

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
examples/: camera.rs  ecs.rs  layout_demo.rs  modern_ui.rs  particles.rs  pathfinding.rs  scenes.rs  stress_test.rs  ui_styling.rs  ui_widgets.rs
resources/: charset.txt  font_glyph_map.json  font_metadata.json  gen-atlas.sh
src/: camera.rs  engine.rs  geometry.rs  lib.rs  main.rs  scene.rs
src/audio/: mod.rs
src/ecs/: mod.rs
src/input/: mod.rs
src/pathfinding/: astar.rs  dijkstra.rs  mod.rs
src/renderer/: atlas.rs  mod.rs  particle_pipeline.rs  pipeline.rs  post_process.rs  scanline_pipeline.rs  shader.wgsl  sprite_atlas.rs  text.rs  text_pipeline.rs  ui_pipeline.rs  utils.rs
src/renderer/shaders/: particle_shader.wgsl  scanline_shader.wgsl  shader.wgsl  text_shader.wgsl  ui_shader.wgsl
src/ui/: mod.rs  modern.rs  widgets.rs
src/window/: config.rs  mod.rs
tests/: animations.rs  ecs.rs  geometry.rs  pathfinding.rs  renderer.rs  text.rs  ui.rs  window.rs
