[package]
name = "jengine"
version = "0.4.5"
edition = "2024"
authors = ["Tadeas Tran <tran.tadeas@protonmail.com>"]
description = "Personal roguelike game engine."
repository = "https://github.com/honyoP/jengine"
keywords = ["gamedev"]
categories = ["game-engines"]
license = "GPL-3.0"

[dependencies]
winit = "0.30"
wgpu = "28"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glam = "0.29"
kira = { version = "0.9", features = ["ogg", "wav"] }

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
